Implement phase 7
